--- a/src/frontend/CMakeLists.txt
+++ b/src/frontend/CMakeLists.txt
@@ -6,9 +6,8 @@ include_directories(../../include)
 
 add_executable(waifu2x-frontend main.cpp)
 target_link_libraries(waifu2x-frontend waifu2x)
-set_target_properties(waifu2x-frontend PROPERTIES LINK_FLAGS "${OpenMP_CXX_FLAGS}")
 
-if(MSVC)
-else()
-        set_target_properties(waifu2x-frontend PROPERTIES COMPILE_FLAGS "-std=c++11")
+if(NOT MSVC)
+	set_target_properties(waifu2x-frontend PROPERTIES LINK_FLAGS "${OpenMP_CXX_FLAGS}")
+	set_target_properties(waifu2x-frontend PROPERTIES COMPILE_FLAGS "-std=c++11")
 endif()
