Unroll y (convolute_add)

--- a/src/waifu2x/CMakeLists.txt
+++ b/src/waifu2x/CMakeLists.txt
@@ -7,7 +7,6 @@ find_package(OpenMP)
 add_library(
 	waifu2x
 	waifu2x.cpp
-	avx2/avx2_impl.cpp
 	avx/avx_impl.cpp)
 
 if(MSVC)
@@ -20,11 +19,9 @@ if(MSVC)
 		endif()
 	endforeach(flag_var)
 	set_target_properties(waifu2x PROPERTIES COMPILE_FLAGS "${OpenMP_CXX_FLAGS}")
-	set_source_files_properties(avx2/avx2_impl.cpp PROPERTIES COMPILE_FLAGS "/arch:AVX2")
-	set_source_files_properties(avx/avx_impl.cpp PROPERTIES COMPILE_FLAGS "/arch:AVX")
+	set_source_files_properties(avx/avx_impl.cpp PROPERTIES COMPILE_FLAGS "/arch:AVX2")
 else()
 	set_target_properties(waifu2x PROPERTIES COMPILE_FLAGS "${OpenMP_CXX_FLAGS} -std=c++11")
-	set_source_files_properties(avx2/avx2_impl.cpp PROPERTIES COMPILE_FLAGS "-mfma -mavx2")
-	set_source_files_properties(avx/avx_impl.cpp PROPERTIES COMPILE_FLAGS "-mavx")
+	set_source_files_properties(avx/avx_impl.cpp PROPERTIES COMPILE_FLAGS "-mfma -mavx2")
 endif()
 
