Split code for loading models

--- a/src/waifu2x/CMakeLists.txt
+++ b/src/waifu2x/CMakeLists.txt
@@ -4,10 +4,7 @@ project(waifu2x)
 include_directories("../../include")
 find_package(OpenMP)
 
-add_library(
-	waifu2x SHARED
-	waifu2x.cpp
-	avx/avx_impl.cpp)
+set(files waifu2x.cpp common/model.cpp avx/avx_impl.cpp)
 
 if(MSVC)
 	# Use static runtime
@@ -18,6 +15,10 @@ if(MSVC)
 			string(REGEX REPLACE "/MD" "/MT" ${flag_var} "${${flag_var}}")
 		endif()
 	endforeach(flag_var)
+endif()
+
+add_library(waifu2x SHARED ${files})
+if(MSVC)
 	set_target_properties(waifu2x PROPERTIES COMPILE_FLAGS "${OpenMP_CXX_FLAGS}")
 	set_source_files_properties(avx/avx_impl.cpp PROPERTIES COMPILE_FLAGS "/arch:AVX2")
 else()
