Add DFT based algorithm (experimental)

--- a/src/waifu2x/CMakeLists.txt
+++ b/src/waifu2x/CMakeLists.txt
@@ -4,7 +4,7 @@ project(waifu2x)
 include_directories("../../include")
 find_package(OpenMP)
 
-set(files waifu2x.cpp common/model.cpp avx/avx_impl.cpp)
+set(files waifu2x.cpp common/model.cpp avx/avx_impl.cpp dft_avx/dft_avx_impl.cpp)
 
 if(MSVC)
 	# Use static runtime
@@ -21,9 +21,11 @@ add_library(waifu2x SHARED ${files})
 if(MSVC)
 	set_target_properties(waifu2x PROPERTIES COMPILE_FLAGS "${OpenMP_CXX_FLAGS}")
 	set_source_files_properties(avx/avx_impl.cpp PROPERTIES COMPILE_FLAGS "/arch:AVX2")
+	set_source_files_properties(dft_avx/dft_avx_impl.cpp PROPERTIES COMPILE_FLAGS "/arch:AVX2")
 else()
 	set_target_properties(waifu2x PROPERTIES COMPILE_FLAGS "${OpenMP_CXX_FLAGS} -std=c++11")
 	set_target_properties(waifu2x PROPERTIES LINK_FLAGS "${OpenMP_CXX_FLAGS}")
 	set_source_files_properties(avx/avx_impl.cpp PROPERTIES COMPILE_FLAGS "-mfma -mavx2")
+	set_source_files_properties(dft_avx/dft_avx_impl.cpp PROPERTIES COMPILE_FLAGS "-mfma -mavx2")
 endif()
 
